Add autonomous SE and QA workflows with guardrails

--- a/site/index.html
+++ b/site/index.html
@@ -71,9 +71,18 @@
           <li>Merge deploys to GitHub Pages automatically.</li>
         </ol>
       </section>
+
+      <section class="ops reveal" aria-labelledby="generated-tools-title">
+        <h2 id="generated-tools-title">Generated Tools</h2>
+        <p class="generated-subhead">
+          New tools created by the Software Engineer workflow appear here after merge.
+        </p>
+        <ul id="generatedTools" class="generated-tools-list">
+          <li class="generated-empty">No generated tools yet.</li>
+        </ul>
+      </section>
     </main>
 
     <script type="module" src="./app.js"></script>
   </body>
 </html>
-
