--- a/site/tools/productownerdailytoolidea2026-02-27-1/index.html
+++ b/site/tools/productownerdailytoolidea2026-02-27-1/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[Product Owner] Daily Tool Idea 2026-02-27 - Utility Forge</title>
+    <title>Base64 / URL-safe Converter - Utility Forge</title>
     <meta name="description" content="Convert UTF-8 text between Base64 and URL-safe Base64 formats." />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <main class="tool-shell">
       <a class="back-link" href="../../index.html">Back to Utility Forge</a>
-      <h1>[Product Owner] Daily Tool Idea 2026-02-27</h1>
+      <h1>Base64 / URL-safe Converter</h1>
       <p id="summary">Convert UTF-8 text between Base64 and URL-safe Base64 formats.</p>
 
       <label for="modeSelect">Mode</label>
