Show planned tool tiles with countdowns on homepage

--- a/site/index.html
+++ b/site/index.html
@@ -77,8 +77,20 @@
         <p class="generated-subhead">
           Live tools and upcoming ideas are listed here. Upcoming tiles show their target date.
         </p>
-        <div id="toolTiles" class="tool-tiles">
-          <article class="tool-tile tool-tile-empty">Loading tools...</article>
+        <p id="catalogStats" class="catalog-stats">Loading catalog stats...</p>
+
+        <div class="catalog-group">
+          <h3 class="catalog-group-title">Live Tools</h3>
+          <div id="liveToolTiles" class="tool-tiles">
+            <article class="tool-tile tool-tile-empty">Loading live tools...</article>
+          </div>
+        </div>
+
+        <div class="catalog-group">
+          <h3 class="catalog-group-title">Planned Next Launches</h3>
+          <div id="plannedToolTiles" class="tool-tiles">
+            <article class="tool-tile tool-tile-empty">Loading planned tools...</article>
+          </div>
         </div>
       </section>
     </main>
